--- a/exo-33.html
+++ b/exo-33.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Exo33</title>
-    <link rel="stylesheet" href="Cssexo33.css">
+    <link rel="stylesheet" href="cssexo33.css">
 </head>
 <body>
     <div>
